Add support for Taskpaper 3.2

--- a/theme.less
+++ b/theme.less
@@ -108,7 +108,7 @@ item[data-search] {
     }
 }
 item[data-done] {
-    > run[display] {
+    > run[content] {
         text-strikethrough: NSUnderlineStyleSingle;
         text-strikethrough-color: fade(@text-color, 20%);
         color: fade(@text-color, 20%);
